--- a/src/log.html
+++ b/src/log.html
@@ -1,66 +1,61 @@
-<!-- Header -->
-<header class="rp_header">
-    <span class="rp_function">anonymous function</span>
-    <span class="rp_file">script.js:12</span>
-    <a href="#" class="rp_close"></a>
-</header>
-
-
-<!-- Tests -->
-<section class="rp_section">
-
-    <a href="#" class="rp_section_header">
-        <span class="rp_section_title">Tests</span>
-        <i class="fa fa-caret-right rp_section_showhide"></i>
-    </a>
-
-</section>
-
-
-<!-- Log -->
-<section class="rp_section">
-
-    <a href="#" class="rp_section_header">
-        <span class="rp_section_title">Log</span>
-        <i class="fa fa-caret-right rp_section_showhide"></i>
-    </a>
-
-    <div class="rp_section_content">
-
-        <table class="rp_log">
-
-            <thead class="rp_log_head">
-                <tr>
-                    <td>time</td>
-                    <td>this</td>
-                    <td>arguments</td>
-                    <td><i class="fa fa-exclamation-triangle"></i></td>
-                </tr>
-            </thead>
-
-            <tbody class="rp_log_time">
-                <tr>
-                    <td colspan="1000">13:34:45</td>
-                </tr>
-            </tbody>
-
-            <tbody class="rp_log_calls">
-                <tr>
-                    <td>455</td>
-                    <td>undefined</td>
-                    <td>[object Object]</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>455</td>
-                    <td>undefined</td>
-                    <td>[object Object]</td>
-                    <td></td>
-                </tr>
-            </tbody>
-
-        </table>
-
-    </div>
-
-</section>
+<!-- Table -->
+<table class="rw_table">
+    <tbody>
+        <tr>
+            <th class="rw_time-group">13:43:25</th>
+            <th class="rw_time">.456</th>
+            <th class="rw_warnings"></th>
+            <td>null</td>
+            <td>"request"</td>
+            <td>[object Object]</td>
+            <td>Array[3]</td>
+        </tr>
+        <tr>
+            <th class="rw_time-group"></th>
+            <th class="rw_time">.578</th>
+            <th class="rw_warnings"></th>
+            <td>null</td>
+            <td>"request"</td>
+            <td>[object Object]</td>
+            <td>Array[3]</td>
+        </tr>
+        <tr>
+            <th class="rw_time-group"></th>
+            <th class="rw_time">.611</th>
+            <th class="rw_warnings"><i class="fa fa-exclamation-triangle"></i></th>
+            <td>null</td>
+            <td>"request"</td>
+            <td>[object Object]</td>
+            <td>Array[3]</td>
+        </tr>
+    </tbody>
+    <tbody>
+        <tr>
+            <th class="rw_time-group">13:43:25</th>
+            <th class="rw_time">.456</th>
+            <th class="rw_warnings"></th>
+            <td>null</td>
+            <td>"request"</td>
+            <td>[object Object]</td>
+            <td>Array[3]</td>
+        </tr>
+        <tr>
+            <th class="rw_time-group"></th>
+            <th class="rw_time">.578</th>
+            <th class="rw_warnings"></th>
+            <td>null</td>
+            <td>"request"</td>
+            <td>[object Object]</td>
+            <td>Array[3]</td>
+        </tr>
+        <tr>
+            <th class="rw_time-group"></th>
+            <th class="rw_time">.611</th>
+            <th class="rw_warnings"><i class="fa fa-exclamation-triangle"></i></th>
+            <td>null</td>
+            <td>"request"</td>
+            <td>[object Object]</td>
+            <td>Array[3]</td>
+        </tr>
+    </tbody>
+</table>
